--- a/configure-heketi-job.yaml
+++ b/configure-heketi-job.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: deploy-heketi
+  name: configure-heketi
   namespace: default
 spec:
   template:
