--- a/deploy-heketi-configMap.yaml
+++ b/deploy-heketi-configMap.yaml
@@ -7,15 +7,29 @@ data:
   deploy-heketi: |-
     #!/bin/bash -e
 
-    # while [ ! -f /var/heketi/manifests/heketi-storage.json ]
-    # do
-    #   sleep 2
-    #   echo -n "waiting for '/var/heketi/manifests/heketi-storage.json'"
-    # done
-    # while true; do sleep 2; done
     /hyperkube kubectl apply -f /var/heketi/manifests/heketi-storage.json
     /hyperkube kubectl delete all,service,jobs,deployment,secret --selector="deploy-heketi"
     /hyperkube kubectl apply -f /opt/bin/heketi-deployment.yaml
+
+    function create_dynamic_provision {
+      # using non-capturing groups
+      heketiIP=`kubectl get svc heketi --no-headers -o yaml| grep -Po '(?<=clusterIP: ).*'`
+      [ ! $heketiIP -z ]; && cat <<EOF | /hyperkube kubectl create -f -
+      ---
+      apiVersion: storage.k8s.io/v1beta1
+      kind: StorageClass
+      metadata:
+        name: default
+      provisioner: kubernetes.io/glusterfs
+      parameters:
+        resturl: "http://$heketiIP:8080"
+      EOF
+    }
+    
+    until create_dynamic_provision
+    do
+      echo -ne "heketi service ip unable to find"\\r
+    done
 
   heketi-deployment.yaml: |-
     ---
@@ -103,30 +117,28 @@ data:
 
     function gluster_readiness {
       curl -sSk -H "Authorization: Bearer $KUBE_TOKEN" https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/pods?labelSelector=glusterfs-node=pod > /tmp/gluster_pods.json 2>&1
-      echo $(python3 - <<EOF
+      python3 - <<EOF
     import sys
     import json
 
     if __name__ == '__main__':
         json_raw = json.loads(open('/tmp/gluster_pods.json').read())
         pods = list((x for x in json_raw['items'] if next((c for c in x['status']['conditions'] if c['type'] == 'Ready' and c['status'] == 'True'), None) is not None))
-        print(len(pods))
+        sys.exit(int(len(pods) < 3))
     EOF
-    )
     }
 
-    c=`gluster_readiness`
-    until [ "$c" -ge 3 ]
+    until gluster_readiness
     do
-      c=`gluster_readiness`
-      echo -ne "$((3 - c)) glusterfs pod left to run.."\\r
+      echo -ne "glusterfs needs 3 pods at least .."\\r
       sleep 3
     done
+    ehco "glusterfs is ready"
 
     function create_topology {
       curl -sSk -H "Authorization: Bearer $KUBE_TOKEN" https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/nodes?labelSelector=storagenode=glusterfs > /tmp/nodes.json 2>&1
 
-      echo $(python3 - <<END
+      python3 - <<END
     import sys
     import json
     import argparse
@@ -155,21 +167,22 @@ data:
            'devices': devices
           }
           topo['clusters'][0]['nodes'].append(node)
-
-        print(json.dumps(topo))
+        f = open('/topology.json', 'w')
+        f.write(json.dumps(topo))
+        f.close()
         sys.exit(int(len(raw['items']) < 3))
 
     END
-      ) > /topology.json
     }
 
     until create_topology
     do
-      echo -ne "retry create topology .."
+      echo -ne "createing topology needs at least 3 nodes .."\\r
     done
+    echo "topology.json saved"
 
-    heketi-cli topology load --json=/topology.json 
-    sleep 10
+    heketi-cli topology load --json=/topology.json
+    sleep 6
 
     result=`heketi-cli setup-openshift-heketi-storage 2>&1`
     echo $result
