change name of pod

--- a/debug-deploy-heketi.yaml
+++ b/debug-deploy-heketi.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: deploy-heketi-dubug
+  name: debug-heketi-config
   namespace: default
 spec:
   containers:
