--- a/manifests/glusterfs/configure-heketi.yaml
+++ b/manifests/glusterfs/configure-heketi.yaml
@@ -14,28 +14,28 @@ data:
     /hyperkube kubectl convert -f /var/heketi/manifests/heketi-storage.json -o yaml > $heketiStorageYaml
     mkdir -p /srv/asset/manifests/glusterfs
     cat $heketiStorageYaml /opt/bin/heketi-deployment.yaml > /srv/asset/manifests/glusterfs/heketi-deployment.yaml
-    /hyperkube kubectl apply -f !$
+    /hyperkube kubectl apply -f /srv/asset/manifests/glusterfs/heketi-deployment.yaml
     set +x
 
     function create_dynamic_provision {
       # using non-capturing groups
       # posible to use dns?
-      heketiIP=`kubectl get svc heketi --no-headers -o yaml| grep -Po '(?<=clusterIP: ).*'`
-      [ ! $heketiIP -z ]; && cat <<EOF | /hyperkube kubectl create -f -
-      ---
-      apiVersion: storage.k8s.io/v1beta1
-      kind: StorageClass
-      metadata:
-        name: default
-      provisioner: kubernetes.io/glusterfs
-      parameters:
-        resturl: "http://$heketiIP:8080"
-      EOF
+      heketiIP=`/hyperkube kubectl get svc heketi --no-headers -o yaml| grep -Po '(?<=clusterIP: ).*'`
+      [ -n ${heketiIP} ] && cat <<EOF | /hyperkube kubectl create -f -
+    ---
+    apiVersion: storage.k8s.io/v1beta1
+    kind: StorageClass
+    metadata:
+      name: default
+    provisioner: kubernetes.io/glusterfs
+    parameters:
+      resturl: "http://$heketiIP:8080"
+    EOF
     }
 
     until create_dynamic_provision
     do
-      echo -ne "heketi service ip unable to find"\\r
+      echo "heketi service ip unable to find"
     done
 
   heketi-deployment.yaml: |-
@@ -236,8 +236,6 @@ spec:
           }
         ]'
     spec:
-      nodeSelector:
-        config-heketi: support
       restartPolicy: Never
       containers:
       - image: gcr.io/google_containers/hyperkube-amd64:v1.5.1
