job can run on master

--- a/manifests/glusterfs/configure-heketi.yaml
+++ b/manifests/glusterfs/configure-heketi.yaml
@@ -207,6 +207,10 @@ spec:
   template:
     metadata:
       annotations:
+        scheduler.alpha.kubernetes.io/critical-pod: ''
+        scheduler.alpha.kubernetes.io/tolerations: |
+          [{"key": "dedicated", "value": "master", "effect": "NoSchedule" },
+           {"key":"CriticalAddonsOnly", "operator":"Exists"}]
         pod.beta.kubernetes.io/init-containers: '[
           {
             "name": "init",
