don't always pull image

--- a/glusterfs-daemonset.yaml
+++ b/glusterfs-daemonset.yaml
@@ -20,7 +20,7 @@ spec:
       hostNetwork: true
       containers:
       - image: gluster/gluster-centos:latest
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: glusterfs
         volumeMounts:
         - name: glusterfs-heketi
