don't always pull image

--- a/deploy-heketi-configMap.yaml
+++ b/deploy-heketi-configMap.yaml
@@ -109,7 +109,7 @@ data:
           serviceAccountName: heketi-service-account
           containers:
           - image: heketi/heketi:dev
-            imagePullPolicy: Always
+            imagePullPolicy: IfNotPresent
             name: heketi
             env:
             - name: HEKETI_EXECUTOR
