--- a/deploy-heketi-configMap.yaml
+++ b/deploy-heketi-configMap.yaml
@@ -153,6 +153,7 @@ data:
   provision: |-
     #!/bin/bash
     KUBE_TOKEN=$(</var/run/secrets/kubernetes.io/serviceaccount/token)
+    NODE_DEVICES="[ `find /dev | egrep $NODE_DEVICES_REGX | xargs printf "'%s'," | sed 's/,$//'` ]"
 
     function gluster_readiness {
       curl -sSk -H "Authorization: Bearer $KUBE_TOKEN" https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_PORT_443_TCP_PORT/api/v1/pods?labelSelector=glusterfs-node=pod > /tmp/gluster_pods.json 2>&1
